Network/TLS/ingress-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ingresstest-nginx-svc
  namespace: ingresstest
spec:
  selector: 
    app: ingresstest-nginx
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80
