Network/TLS/tls-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  namespace: ingresstest
spec:
  ingressClassName: nginx  # This line specifies the IngressClass
  tls:
    - hosts:
      - tls-ingress.info
      secretName: ingress-tls
  rules:
    - host: tls-ingress.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingresstest-nginx-svc
                port:
                  number: 80
